# symmetricNNs

./: .gitignore  README.md  example.py  pyproject.toml
examples/: SymmetricGrpExample.ipynb
lib/: traintest.py
lib/lib/: setpartitions.py  symmpartitions.py
nn/: symmequiv.py
tests/: test_setpartitions.py
